Fixed some things related to rounded corners
In fullscreen the tabs didn't align well since I applied the round corners. Also not for dark mode, but that's all fixed. Still the tabstrip doesn't have a top border in fullscreen, I don't know why. I added menubar and bookmarksbar to the inactive (unfocused) window and gave them a top border instead of bottom border.

--- a/userChrome.css
+++ b/userChrome.css
@@ -433,6 +433,9 @@ toolbar .toolbarbutton-1:active > .toolbarbutton-icon {
 }
 
 /* DARK MODE */
+:root[sizemode="fullscreen"] #TabsToolbar:-moz-lwtheme-brighttext {
+  height: 31px !important; /* fix tab align in fullscreen for dark mode */
+}
 #nav-bar:-moz-lwtheme-brighttext {
     -moz-appearance: none !important;
 	background: linear-gradient(#393D43, #35383D) !important;
